# Max_Clique

./: Memoria.docx  run.sh
libGA100/: calccl.c  chrom.c  config.c  cross.c  function.c  ga.c  mutate.c  pool.c  replace.c  report.c
libGA_ALL/: ga.h
libGA_ALL/__MACOSX/: ._ga.h  ._libgaALL.c
version_1/: ga-test.c
version_1/libGA100/: codigo_mcp.c  ga.h  makefile-old
version_2/: CMakeLists.txt  GAconfig_ejemplo_bits  codigo_CMP  codigo_CMP.c  funciones.c  mi_programa  run.sh
version_2/Archivos_Config/: GAconfig_MANN_a9  GAconfig_Toy4  GAconfig_Toy6  GAconfig_Toy8  GAconfig_ejemplo_bits  GAconfig_ejemplo_perms  GAconfig_hamming6-2  GAconfig_hamming6-4  GAconfig_johnson8-2-4  GAconfig_johnson8-4-4  GAconfig_keller4  GAconfig_p_hat300-1  GAconfig_p_hat500-2
version_2/Ejemplo/: ga-test  ga-test.c
version_2/Juanjo/: hamming6-2.txt  hamming6-4.txt  johnson8-2-4.txt  johnson8-4-4.txt  p_hat300-1.txt
version_2/Results/: results_hamming6-2.txt  results_hamming6-4.txt
version_2/libGA_ALL/: libgaALL.c  mi_codigo.c  mi_programa
